DOMWindow::dispatchEvent() does not reset the event's dispatch flag https://bugs.webkit.org/show_bug.cgi?id=178897

Reviewed by Darin Adler.

Source/WebCore:

Make sure we reset the currentTarget, dispatch flag, phase and propagation flags
after dispatching an event on a Window, as per:
- https://dom.spec.whatwg.org/#concept-event-dispatch

This behavior is consistent with Firefox.

Test: fast/events/window-load-initEvent.html

* page/DOMWindow.cpp:
(WebCore::DOMWindow::dispatchEvent):

LayoutTests:

Add layout test coverage. I have verified that this test is passing in Firefox.

* fast/events/window-load-initEvent-expected.txt: Added.
* fast/events/window-load-initEvent.html: Added.


Canonical link: https://commits.webkit.org/195096@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224125 268f45cc-cd09-0410-ab3c-d52691b4dbfc